Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-04-24
* Bug fixes (see mercurial logs for details)
* Allow to have no Party Sequence

Version 2.2.0 - 2011-10-24
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)
* Add default address on party

Version 1.6.0 - 2010-05-10
* Bug fixes (see mercurial logs for details)
* Don't allow empty vat_number if vat_country is set
* Use model singleton to define which party sequence to use
* Improve search_rec_name of category to take care of separator

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Add CheckVIES wizard (VAT Information Exchange System)
* Add default categories on party with context
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release